--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+	overflow: scroll;
+	::-webkit-scrollbar {
+		width: 0px;
+		height: 0px;
+		background: transparent;
+	}
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
