--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,10 +13,18 @@ html {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  @apply bg-gradient-to-br via-white to-white  dark:from-gray-900;
 }
 
-.container {
-	@apply w-full sm:max-w-[640px] md:max-w-[768px] lg:max-w-[868px] mx-auto px-6
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 @layer utilities {
@@ -89,3 +97,5 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+
